# the-money-drop

./: CMakeLists.txt  README.md
data/: questions.jsonl
include/: game.hpp  game_state.hpp  menu.hpp  question.hpp  screen.hpp  screen_actions.hpp  utils.hpp
scripts/: generate_questions.py
src/: game.cpp  game_screen.cpp  game_state.cpp  main.cpp  main_screen.cpp  menu.cpp  screen.cpp
